fix: Remove default overflow:clip from root

--- a/src/container/styles.scss
+++ b/src/container/styles.scss
@@ -11,7 +11,6 @@
   @include styles.styles-reset;
   display: block;
   word-wrap: break-word;
-  overflow: clip;
   &.variant {
     &-default,
     &-stacked {
